fixed video div spacing again

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -259,7 +259,7 @@
     padding-bottom: 56.25%; /* 16:9 */
     //padding-top: 25px;
     height: 0;
-    margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit / 2;
 
     iframe {
         position: absolute;
